--- a/docs/_layouts/slide.html
+++ b/docs/_layouts/slide.html
@@ -11,6 +11,8 @@
       {% endif %}
     </title>
 
+    <meta name="url" content="{{ site.baseurl }}" />
+    <meta name="url" content="{{ site.url }}" />
     <meta name="author" content="{{ site.author }}" />
 
     <!-- Description -->
